# ionoSphere

./: .gitattributes  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml  push.yml
docs_ionosphere/: arborescence  commandes_prinicpal.txt  file_structure.txt  methodes_optimisation_modele_IA  modeles_IA_utilisés  ressources_de_donnees  scan_project.py  structure_ionosphere  token_huggin_face
microservices/analysis_service/: Dockerfile  main.py
microservices/creation_service/: Dockerfile  main.py
microservices/planning_service/: Dockerfile  main.py
microservices/resource_suggestion_service/: Dockerfile  main.py
nodes/routing_node/: Cargo.toml  Dockerfile  main.py  requirements.txt
nodes/routing_node/src/: lib.rs
nodes/routing_node/tests/: test_example.py  test_ionosphere.rs
nodes/strategy_service/: Dockerfile  main.py  requirements.txt
optimization_scripts/: batching.py  clusterize.py  compress.py  dilstill_models.py  hardware_acceleration.py  quantize_prune.py
