[package]
name = "ionosphere"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
tokenizers = "0.21.0"
# ou la dernière version compatible

[lib]
name = "ionosphere"
path = "src/lib.rs"

[profile.release]
opt-level = 3
